--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,3 +1,16 @@
+
+.paginator {
+    margin: 10px;
+}
+
 .selectedPage {
+    padding: 2px;
+    border: 1px solid grey;
     font-weight: bold;
+    border-color: black;
+}
+
+.noSelectedPage {
+    padding: 2px;
+    border: 1px solid grey;
 }
