--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,7 +1,3 @@
-.content__image {
-    width: 500px;
-}
-
 .descriptionBlock {
     padding: 10px;
 }
@@ -11,4 +7,13 @@
     height: 300px;
 }
 
+.contacts {
+    padding-left: 10px;
+}
+
+.formSummaryError {
+    border: red 1px solid;
+    padding: 5px;
+    color: red;
+}
 
