99 lesson - try-catch, classnames

--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -3,14 +3,13 @@
     margin: 10px;
 }
 
-.selectedPage {
+.pageNumber {
     padding: 2px;
     border: 1px solid grey;
+}
+
+.selectedPage {
     font-weight: bold;
     border-color: black;
 }
 
-.noSelectedPage {
-    padding: 2px;
-    border: 1px solid grey;
-}
